[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "factorial"
harness = false

[dependencies]
flamegraph = "0.6.5"
num = "0.4.1"

[profile.bench]
debug = true

[profile.release]
debug = true
